Xfce v4.18: Fix invisible items in thunar sidebar

--- a/gtk-3.0/gtk-dark.css
+++ b/gtk-3.0/gtk-dark.css
@@ -5555,10 +5555,6 @@ window.background.budgie-settings-window.csd > box.horizontal > stack > scrolled
 .thunar toolbar.horizontal button image {
   -gtk-icon-transform: scale(0.72); }
 
-scrolledwindow.sidebar treeview.view {
-  background: #16191b;
-  padding: 1.5px; }
-
 /* path-bar of thunar */
 window.thunar toolbar#location-toolbar > toolitem > widget > widget.linked.path-bar > button.toggle.path-bar-button, .thunar toolbar .path-bar-button {
   margin-top: 7px;
@@ -5578,15 +5574,18 @@ window.thunar toolbar#location-toolbar > toolitem > widget > widget.linked.path-
   box-shadow: none; }
 
 /* thunar sidepane */
-window.thunar paned > scrolledwindow treeview.view:hover {
-  background: #0f1113; }
-window.thunar paned > scrolledwindow treeview.view:selected {
-  border-radius: 23px;
-  background: linear-gradient(to right, #F67E7D, #E1DD8F);
-  color: #f7f7f7;
-  text-shadow: 0px 0px 2px rgba(87, 87, 87, 0.9);
-  border-radius: 0;
-  box-shadow: none; }
+.thunar scrolledwindow.sidebar treeview.view {
+  background: #111416;
+  padding: 1.5px; }
+  .thunar scrolledwindow.sidebar treeview.view:hover {
+    background: #21262a; }
+  .thunar scrolledwindow.sidebar treeview.view:selected {
+    border-radius: 23px;
+    background: linear-gradient(to right, #F67E7D, #E1DD8F);
+    color: #f7f7f7;
+    text-shadow: 0px 0px 2px rgba(87, 87, 87, 0.9);
+    border-radius: 0;
+    box-shadow: none; }
 
 window.thunar toolbar#location-toolbar entry {
   border-radius: 10px; }
